[package]
name = "avpony-lang"
version = "0.1.0"
edition = "2021"

[dependencies]
ariadne = "0.4.1"
chumsky = "0.9.3"
swc_common = { version = "0.33.26", features = ["plugin-mode"] }
swc_ecma_ast = "0.113.4"
swc_ecma_parser = "0.144.1"
syn = { version = "2.0.65", features = ["full"] }
avpony-macros = { path = "../macros" }
