[package]
name = "avpony-lang"
version = "0.1.0"
edition = "2021"

[dependencies]
ariadne = "0.4.1"
swc_common = { version = "0.34.3", features = ["plugin-mode"] }
swc_ecma_ast = "0.115.1"
swc_ecma_parser = "0.146.8"
syn = { version = "2.0.65", features = ["full"] }
avpony-macros = { path = "../macros" }
regex = "1.10.4"
unicode-ident = "1.0.12"
chumsky = { git = "https://github.com/Sammy99jsp/chumsky", rev = "e0f5ee7f" }

[build-dependencies]
proc-macro2 = { version = "1.0.83", features = ["nightly", "span-locations"] }
syn = { version = "2.0.65", features = ["full"] }
serde = { version = "1.0.203", features = ["derive", "serde_derive"] }
serde_json = "1.0.117"
quote = "1.0.36"
